--- a/vignettes/OxfordPlots.Rmd
+++ b/vignettes/OxfordPlots.Rmd
@@ -2,6 +2,7 @@
 title: "Alignment line plots, whole genomes"
 author: 
  - "Charles Plessy"
+ - "Michael Mansfield"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: rmarkdown::html_vignette
 vignette: >
