--- a/vignettes/SquareWindowPlots.Rmd
+++ b/vignettes/SquareWindowPlots.Rmd
@@ -43,6 +43,7 @@ at their midpoints.
 ```{r mkOxPlotWindow_function}
 mkOxPlotWindow <- function(gb, win = 5e6, size = 2, centre = c('midpoint', 'maxwidth'), ...) {
   centre <- match.arg(centre)
+  seqlevels(gb) <- seqlevelsInUse(gb)
   gb <- forceSeqLengths(gb)
   longest_target_seq <- seqlengths(gb) |> sort() |> tail(1) |> names()
   best_query_match   <- gb[seqnames(gb) == longest_target_seq]$query |> seqnames() |> table() |> sort() |> tail(1) |> names()
@@ -290,4 +291,33 @@ contiguous because the dots need to be thick to be easy to see.
 ```{r hg38_mm10, dev='svg', fig.ext='svg'}
 hgmm <- load_genomic_breaks(system.file(("extdata/hg38_mm10/hg38_chr18__mm10_chr18.gff3"), package = "BreakpointsData"))
 mkOxPlotWindow(hgmm, centre = 'maxwidth') + ggtitle("Homo sapiens vs Mus musculus")
+```
+
+# Nematodes
+
+_Caenorhabditis briggsae_ and _C. elegans_ are hermaphrodites, so let's avoid using them as
+target genomes.
+
+But _C. briggsae_ is closest to _C. nigoni_ so we need it once as a query genome.
+
+## _C. nigoni_ vs _C. briggsae_
+
+```{r Cnig_Cbri_win, dev='svg', fig.ext='svg'}
+Cnig_Cbri <- load_genomic_breaks("/bucket/LuscombeU/live/CharlesPlessy/ScramblingInTheTreeOfLife/Nematoda/results_Caenorhabditis_nigoni_GCA_027920645.1/last/Caenorhabditis_nigoni_GCA_027920645.1___Caenorhabditis_briggsae_GCA_022453885.1.07.postmasked.maf.gz")
+# Removing CP115869.1 as it has a large nigni-specific region at the middle and it is the only one like that.
+mkOxPlotWindow(Cnig_Cbri |> plyranges::filter(seqnames != "CP115869.1"), centre = 'maxwidth') + ggtitle("Caenorhabditis nigoni vs C. briggsae (61% aligned, 81% identity)")
+```
+
+## _C. nigoni_ vs _C. remanei_
+
+```{r Cnig_Crem_win, dev='svg', fig.ext='svg'}
+Cnig_Crem <- load_genomic_breaks("/bucket/LuscombeU/live/CharlesPlessy/ScramblingInTheTreeOfLife/Nematoda/results_Caenorhabditis_nigoni_GCA_027920645.1/last/Caenorhabditis_nigoni_GCA_027920645.1___Caenorhabditis_remanei_GCA_001643735.4.07.postmasked.maf.gz")
+mkOxPlotWindow(Cnig_Crem, centre = 'maxwidth') + ggtitle("Caenorhabditis nigoni vs C. remanei (27% aligned, 67% identity)")
+```
+
+## _C. nigoni_ vs _C. inopinata_
+
+```{r Cnig_Cino_win, dev='svg', fig.ext='svg'}
+Cnig_Cino <- load_genomic_breaks("/bucket/LuscombeU/live/CharlesPlessy/ScramblingInTheTreeOfLife/Nematoda/results_Caenorhabditis_nigoni_GCA_027920645.1/last/Caenorhabditis_nigoni_GCA_027920645.1___Caenorhabditis_inopinata_GCA_003052745.1.07.postmasked.maf.gz")
+mkOxPlotWindow(Cnig_Cino, centre = 'maxwidth') + ggtitle("Caenorhabditis nigoni vs C. inopinata (18% aligned, 68% identity)")
 ```
